--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -33,16 +33,42 @@
 					</a>
 				</div>
 				<!-- end logo -->
+
 				<!-- begin search -->
 				<div class="search header__search js-search">
 					<form class="search__form">
-						<input type="text" class="search__field" placeholder="Поиск...">
-						<button type="submit" class="search__btn">
-							{{mixin.icon('search', 'search__icon')}}
-						</button>
+							<input type="text" class="search__field js-search-input" placeholder="Поиск по тканям..." autocomplete="off">
+							<button type="submit" class="search__btn">
+								{{mixin.icon('search', 'search__icon')}}
+							</button>
+							<div class="search__hint" style="display: none;">
+								<div class="search-hint search-hint--cyties">
+									<ul class="search-hint__list">
+										<li class="search-hint__item">
+											<a href="#" class="search-hint__link">
+												<span class="search-hint__bade search-hint__bade--location">Еврофатин LUXE</span>
+												<span class="search-hint__text product-item__title">Атлас дюпон <span>white</span></span>
+											</a>
+										</li>
+										<li class="search-hint__item">
+											<a href="#" class="search-hint__link">
+												<span class="search-hint__bade search-hint__bade--location">Еврофатин LUXE</span>
+												<span class="search-hint__text product-item__title">Атлас дюпон <span>white</span></span>
+											</a>
+										</li>
+										<li class="search-hint__item">
+											<a href="#" class="search-hint__link">
+												<span class="search-hint__bade search-hint__bade--location">Еврофатин LUXE</span>
+												<span class="search-hint__text product-item__title">Атлас дюпон <span>white</span></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
 					</form>
 				</div>
 				<!-- end search -->
+
 				<!-- begin user-nav -->
 				<div class="user-nav header__user-nav">
 					<ul class="user-nav__list">
