--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -46,6 +46,7 @@
 
 	<!-- begin scripts -->
 	<script type="text/javascript" src="js/libs.min.js"></script>
+	<script type="text/javascript" src="js/del.js"></script>
 	{% block scripts %}{% endblock %}
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- end scripts -->
