--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -43,7 +43,7 @@
 
 {% macro policy(class) %}
 <div class="policy js-policy {{class}}">
-	Нажимая на кнопку "Какая-то кнопка" Вы автоматически  <a href="agreement.html" target="_blank">персональных данных</a> и принимаете условия <a href="rules.html" target="_blank">пользовательского соглашения</a>
+	Заполняя форму, Вы соглашаетесь на обработку персональных данных в соответствии с <a href="#" target="_blank">Условиями пользовательского соглашения</a>.
 </div>
 {% endmacro %}
 
