--- a/src/sass/pages/_catalog.scss
+++ b/src/sass/pages/_catalog.scss
@@ -684,17 +684,29 @@
 				margin-right: $gutter;
 				margin-bottom: 0;
 				border-color: $color-border--light;
+				@include respond-to(xs) {
+					margin-right: $gutter/2;
+				}
 			}
 			&__desc{
 				flex: 1;
+				@include respond-to(xs) {
+					padding: 0;
+				}
 			}
 			&__title{
 				margin-bottom: 5px;
 				font-size: 18px;
+				@include respond-to(xs) {
+					font-size: 15px;
+				}
 			}
 			&__articul{
 				font-size: 15px;
 				text-transform: initial;
+				@include respond-to(xs) {
+					display: none;
+				}
 				span{
 					text-transform: uppercase;
 				}
@@ -704,20 +716,56 @@
 				letter-spacing: 0.5px;
 				font-family: $f2-bold;
 				font-weight: 700;
+				@include respond-to(xs) {
+					margin-bottom: $gutter;
+					font-size: 16px;
+					order: 2;
+					flex: 1;
+				}
 				span{
 					font-family: $f-light;
 					font-weight: 300;
 					font-size: 16px;
 				}
+				&--current{
+					@include respond-to(xs) {
+						margin-right: $gutter;
+						order: 1;
+						flex: initial;
+					}
+				}
+			}
+			&__box{
+				@include respond-to(xs) {
+					flex-wrap: wrap;
+				}
+			}
+			&__del{
+				position: absolute;
+				top: 15px;
+				right: 0;
 			}
 		}
 		.item-select{
-			min-width: 320px;
+			max-width: 180px;
+			width: 100%;
 			margin-top: 0;
 			position: relative;
 
+			@include respond-to(xs) {
+				order: 3;
+			}
+
 			&--count{
 				.item-select__subtitle{width: 140px;}
+			}
+
+			&__title{
+				width: 100%;
+				text-align: center;
+				&_wrap{
+					.item-select__title{width: 100%;}
+				}
 			}
 
 			&__caption{
