--- a/src/templates/cart-order.html
+++ b/src/templates/cart-order.html
@@ -68,7 +68,7 @@ wrapperClass: page-cart
 								</div>
 								<div class="input form__input">
 									<input 
-									type='text'
+									type='number'
 									class="input__field"
 									placeholder="Индекс">
 									<span class="input__error">*Какая-то ошибочка вышла</span>
@@ -93,14 +93,12 @@ wrapperClass: page-cart
 							</div>
 						</div>
 
-						
+					</div>						
 
-						<div class="form-success">
-							<div class="form-success__center">
-								<h3 class="form-success__title">Спасибо за регистрацию!</h3>
-							</div>
+					<div class="form-success">
+						<div class="form-success__center">
+							<h3 class="form-success__title">Спасибо за регистрацию!</h3>
 						</div>
-
 					</div>
 
 					<div class="policy cart__policy">
