--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -33,7 +33,7 @@ wrapperClass: page-cart
 						</div>
 						<div class="product-item__box">
 
-							<div class="product-item__price">
+							<div class="product-item__price product-item__price--current">
 								340 <span>руб./м</span>
 							</div>
 
@@ -46,27 +46,18 @@ wrapperClass: page-cart
 									<div class="item-select__control item-select__control--plus js-item-select-control--plus"></div>
 								</div>
 								<div class="item-select__list">
-									<div class="item-select__item item-select__item--header">
-										<span class="item-select__title">Купить от:</span>
-										<span class="item-select__subtitle">Цена за метр:</span>
-									</div>
 									<div class="item-select__item">
 										<span class="item-select__title">1 м</span>
-										<span class="item-select__subtitle">340,00 руб.</span>
 									</div>
 									<div class="item-select__item">
 										<div class="item-select__title_wrap">
 											<span class="item-select__title">15 м </span>
-											<span class="item-select__title_desc">(рулон)</span>
 										</div>
-										<span class="item-select__subtitle">4 335,00 руб. <span>-15%</span></span>
 									</div>
 									<div class="item-select__item">
 										<div class="item-select__title_wrap">
 											<span class="item-select__title">150 м</span>
-											<span class="item-select__title_desc">(10 рулонов)</span>
 										</div>
-										<span class="item-select__subtitle">38 250,00 руб. <span>-25%</span></span>
 									</div>
 								</div>
 							</div>
