--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -91,7 +91,7 @@
 							</a>
 						</li>
 						<li class="user-nav__item user-nav__item--cart" data-cart-counter="8">
-							<a href="#" class="user-nav__link">
+							<a href="cart.html" class="user-nav__link">
 								<i class="fal fa-shopping-cart user-nav__icon"></i>
 								<span class="user-nav__text">Корзина</span>
 							</a>
