--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -23,23 +23,23 @@ h1,.h1, h2,.h2, h3,.h3, h4,.h4, h5,.h5, h6,.h6 {
 }
 
 h1,.h1,h2,.h2{
-	font-family: $f-bold;
-	font-weight: 600;	
+	font-family: $f2-bold;
+	font-weight: 600;
+	text-transform: uppercase;
 }
 
 h1,.h1 {
-	font-size: 48px;
+	font-size: 28px;
 	line-height: 1.05em;
 	@include max-screen(1024) {
-		font-size: 40px;
+		font-size: 26px;
 		line-height: 1.125em;
 	}
-	@include max-screen(768) {
-		font-size: 32px;		
+	@include max-screen(480) {
+		font-size: 24px;		
 	}
 }
 h2,.h2 {
-	font-family: $f2-bold;
 	font-size: 22px;
 	line-height: 1.25em;
 	font-weight: 400;
