--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -1,17 +1,48 @@
 ---
-title: 
+title: Контакты
+wrapperClass: page-contacts
 ---
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
 
-	<!-- begin home -->
-	<main class="main home">
+	<!-- begin home contacts -->
+	<main class="main contacts">
+		<div class="container">
 
-		
+			<div class="contacts__wrap">
+				<div class="contacts__map">
+					<div class="contacts-map" id="contacts-map"></div>
+				</div>
+				<div class="contacts__text">
+					<h1 class="h1 contacts__title">Контакты</h1>
+					<div class="contacts-box__wrap">
+						<div class="contacts__box contacts-box">
+							<span class="contacts-box__title "><i class="fal fa-phone contacts-box__icon"></i>Телефоны</span>
+							<div class="contacts-box__item">
+								<a href="tel:88007078630" class="contacts-box__link">8 800 707-86-30</a>
+								<a href="tel:79372531125" class="contacts-box__link">7 937 253-11-25</a>
+							</div>
+						</div>
+						<div class="contacts__box contacts-box">
+							<span class="contacts-box__title"><i class="fal fa-envelope contacts-box__icon"></i>E-mail</span>
+							<div class="contacts-box__item">
+								<a href="mailto:info@yandex.ru" class="contacts-box__link">info@yandex.ru</a>
+							</div>
+						</div>
+						<div class="contacts__box contacts-box">
+							<span class="contacts-box__title"><i class="fal fa-map-marker-alt contacts-box__icon"></i>Адрес:</span>
+							<div class="contacts-box__item">
+								<span class="contacts-box__link">г.Москва ул.Чехова, 55</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
+		</div>
 	</main>	
-	<!-- end home -->
+	<!-- end home contacts -->
 
 {% endblock %}
 
