--- a/src/sass/pages/_contacts.scss
+++ b/src/sass/pages/_contacts.scss
@@ -97,8 +97,7 @@
 		position: relative;		
 	}//.contacts-box__title
 
-	&__item{
-	}//.contacts-box__item
+	&__item{}//.contacts-box__item
 
 	&__link{
 		display: block;
