--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -73,12 +73,12 @@
 				<div class="user-nav header__user-nav">
 					<ul class="user-nav__list">
 						<li class="user-nav__item">
-							<a href="#auth-form" data-toggle="modal" class="user-nav__link xs-hide">
+							<a href="#auth-form" data-toggle="modal" class="user-nav__link sm-hide">
 								<i class="fal fa-user user-nav__icon"></i>
 								<span class="user-nav__text">Войти</span>
 							</a>
 						</li>
-						<li class="user-nav__item xs-only">
+						<li class="user-nav__item sm-only">
 							<a href="javascript:void(0);" class="user-nav__link js-mobile-search--show">
 								<i class="fal fa-search user-nav__icon"></i>
 								<span class="user-nav__text">Поиск</span>
