--- a/src/templates/lk-order.html
+++ b/src/templates/lk-order.html
@@ -50,6 +50,7 @@ wrapperClass: page-lk
 				
 				<div class="user-order">
 					<div class="accordeon lk__accordeon js-accordeon">
+						{% for i in range(0, 3) %}
 						<div class="accordeon__item user-order__item">
 							<div class="accordeon__title user-order__title">
 								<div class="user-order__box">
@@ -68,8 +69,8 @@ wrapperClass: page-lk
 									<div class="user-order-item__img">
 										<img src="img/products/atlas/small/1.png" alt="Атлас дюпон">
 									</div>
-									<div class="user-order-item__left">
-										<div class="user-order-item__desc">
+									<div class="user-order-item__desc">
+										<div class="user-order-item__left">										
 											<div class="user-order-item__title_wrap">
 												<h5 class="h5 user-order-item__title product-item__title">
 													<a href="#">Атлас дюпон <span>white</span></a>
@@ -78,16 +79,16 @@ wrapperClass: page-lk
 												<span class="user-order-item__articul">ac06</span>
 											</div>
 										</div>
-									</div>
-									<div class="user-order-item__right">
-										<div class="user-order-item__box">
-											<div class="user-order-item__price">
-												340 <span>руб./м</span> &nbsp; x &nbsp;
-												<span class="user-order-item__count">15 <span>м (1 рул)</span></span>
+										<div class="user-order-item__right">
+											<div class="user-order-item__box">
+												<div class="user-order-item__price">
+													340 <span>руб./м</span> &nbsp; x &nbsp;
+													<span class="user-order-item__count">15 <span>м (1 рул)</span></span>
+												</div>
 											</div>
-										</div>
-										<div class="user-order-item__box">
-											<span class="user-order-item__sum">4 350,00 <span>руб.</span></span>
+											<div class="user-order-item__box">
+												<span class="user-order-item__sum">4 350,00 <span>руб.</span></span>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -96,8 +97,8 @@ wrapperClass: page-lk
 									<div class="user-order-item__img">
 										<img src="img/products/atlas/small/1.png" alt="Атлас дюпон">
 									</div>
-									<div class="user-order-item__left">
-										<div class="user-order-item__desc">
+									<div class="user-order-item__desc">
+										<div class="user-order-item__left">										
 											<div class="user-order-item__title_wrap">
 												<h5 class="h5 user-order-item__title product-item__title">
 													<a href="#">Атлас дюпон <span>white</span></a>
@@ -106,22 +107,23 @@ wrapperClass: page-lk
 												<span class="user-order-item__articul">ac06</span>
 											</div>
 										</div>
-									</div>
-									<div class="user-order-item__right">
-										<div class="user-order-item__box">
-											<div class="user-order-item__price">
-												340 <span>руб./м</span> &nbsp; x &nbsp;
-												<span class="user-order-item__count">15 <span>м (1 рул)</span></span>
+										<div class="user-order-item__right">
+											<div class="user-order-item__box">
+												<div class="user-order-item__price">
+													340 <span>руб./м</span> &nbsp; x &nbsp;
+													<span class="user-order-item__count">15 <span>м (1 рул)</span></span>
+												</div>
 											</div>
-										</div>
-										<div class="user-order-item__box">
-											<span class="user-order-item__sum">4 350,00 <span>руб.</span></span>
+											<div class="user-order-item__box">
+												<span class="user-order-item__sum">4 350,00 <span>руб.</span></span>
+											</div>
 										</div>
 									</div>
 								</div>
 
 							</div>
-						</div>					
+						</div>	
+						{% endfor %}﻿				
 					</div>
 				</div>
 				
